--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>BB portfolio</title>
+	<title>BhavyaBabariya portfolio</title>
 
 	<!-- Latest compiled and minified CSS -->
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css">
@@ -30,7 +30,7 @@
 	<div class="container">
 		<div class="nav_section">
 			<nav class="navbar navbar-expand-lg navbar-light">
-  <a class="navbar-brand text-white" href="#">BhavyaBabariya portfolio <span>.</span>
+  <a class="navbar-brand text-white" href="#" <span>.</span>
   </a>
   <button class="navbar-toggler" style="border: none;" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <i class="text-white fa fa-bars" ></i>
