--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 				</div>
 				<div class="col-lg-6 col-md-6 col-ms-12 col-xs-12">
 					<center>
-						<img src="#">
+					<!--	<img src="#">-->
 					</center>
 				</div>
 			</div>
