--- a/index.html
+++ b/index.html
@@ -42,9 +42,10 @@
         <a class="nav-link" style="color: #f87652 !important;" href="#">Home</a>
       </li>
       
-      <li class="nav-item">
-        <a class="nav-link" href="#">About</a>
-      </li>
+	  <li class="nav-item">
+		<a class="nav-link" href="#">About</a>
+	  </li>
+	  
 
       <li class="nav-item">
         <a class="nav-link" href="#">Skills</a>
@@ -52,10 +53,6 @@
 
       <li class="nav-item">
         <a class="nav-link" href="#">portfolio</a>
-      </li>
-
-      <li class="nav-item">
-        <a class="nav-link" href="#">Blog</a>
       </li>
 
       <li class="nav-item">
@@ -217,6 +214,179 @@
 		</div>
 	</div>
 
+	<!-- Portfilio Section -->
+	<div class="portfolio_section">
+		<div class="container">
+			<div class="row">
+				<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+					<h1 class="text-white text-center">My Portfolio<span style ="color: #f87652;">.</span></h1>
+				</div>
+			</div>
+			<div class="row mt-5">
+				<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+					<nav class="d-flex justify-content-center">
+						<div class="nav nav-tabs nav-fill" id="nav-tab" role="tablist">
+							<a class="nav-item nav-link text-white active" id="nav-home-tab" data-toggle="tab" href="#nav-home" role="tab" aria-controls="nav-home" aria-selected="true">HTML/CSS</a>
+							<a class="nav-item nav-link text-white" id="nav-profile-tab" data-toggle="tab" href="#nav-profile" role="tab" aria-controls="nav-profile" aria-selected="false">Wordpress</a>
+							<a class="nav-item nav-link text-white" id="nav-webflow-tab" data-toggle="tab" href="#nav-webflow" role="tab" aria-controls="nav-webflow" aria-selected="false">Webflow</a>
+						</div>
+					</nav>
+					<div class="tab-content py-3 px-3 px-sm-0" id="nav-tabContent">
+						<div class="tab-pane fade show active" id="nav-home" role="tabpanel" aria-labelledby="nav-home-tab">
+							<div class="card-columns">
+								<div class="card border-0 padding-0">
+									<a href=""><img class="card-img-top" src="Images/Web_1.png" alt=""></a>
+								</div>
+								<div class="card border-0 padding-0">
+									<a href=""><img class="card-img-top" src="Images/Web1.png" alt=""></a>
+								</div>
+								<div class="card border-0 padding-0">
+									<a href=""><img class="card-img-top" src="Images/Web2.png" alt=""></a>
+								</div>
+								<div class="card border-0 padding-0">
+									<a href=""><img class="card-img-top" src="Images/Web4.png" alt=""></a>
+								</div>
+								<div class="card border-0 padding-0">
+									<a href=""><img class="card-img-top" src="Images/Web5.png" alt=""></a>
+								</div>
+							</div>
+						</div>
+						<div class="tab-pane fade" id="nav-profile" role="tabpanel" aria-labelledby="nav-profile-tab">
+							<div class="tab-pane fade show active" id="nav-home" role="tabpanel" aria-labelledby="nav-home-tab">
+								<div class="card-columns">
+									<div class="card border-0 padding-0">
+										<a href=""><img class="card-img-top" src="Images/Web_1.png" alt=""></a>
+									</div>
+									<div class="card border-0 padding-0">
+										<a href=""><img class="card-img-top" src="Images/Web1.png" alt=""></a>
+									</div>
+									<div class="card border-0 padding-0">
+										<a href=""><img class="card-img-top" src="Images/Web2.png" alt=""></a>
+									</div>
+									<div class="card border-0 padding-0">
+										<a href=""><img class="card-img-top" src="Images/Web4.png" alt=""></a>
+									</div>
+									<div class="card border-0 padding-0">
+										<a href=""><img class="card-img-top" src="Images/Web5.png" alt=""></a>
+									</div>
+								</div>
+						</div>
+					</div>
+					<div class="tab-pane fade" id="nav-webflow" role="tabpanel" aria-labelledby="nav-webflow-tab">
+						<div class="tab-pane fade show active" id="nav-home" role="tabpanel" aria-labelledby="nav-home-tab">
+							<div class="card-columns">
+								<div class="card border-0 padding-0">
+									<a href=""><img class="card-img-top" src="Images/Web3.png" alt=""></a>
+								</div>
+							</div>
+					</div>
+				</div>
+				</div>
+			</div>
+		</div>
+	</div>
+
+	<!-- Contact Section -->
+	<div class="contact_section">
+		<div class="container">
+			<div class="row m-0">
+				<div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+					<div>
+						<h3 class="heading">Contact me<span style ="color: #f87652;">.</span></h3>
+						<hr>
+						<p class="txt">Feel free to contact with me.</p>
+						<form>
+							<div class="form-group">
+								<input class="form-control" type="text" placeholder="Your Name">
+							</div>
+							<div class="form-group">
+								<input class="form-control" type="email" placeholder="Your Email">
+							</div>
+							<div class="form-group">
+								<input class="form-control" type="text" placeholder="Subject">
+							</div>
+							<div class="form-group">
+								<textarea class="form-control" placeholder="Type your message..." cols="30" rows="10"></textarea>
+							</div>
+							<div class="form-group">
+								<button class="btn btn-light animate__animated" type="submit">Submit</button>
+							</div>
+						</form>
+					</div>
+				</div>
+				<div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+					<ul class="list-unstyled">
+						<li>
+							<i class="fa fa-envelope-o"></i> bhavyababariya007@gmail.com
+						</li>
+						<li>
+							<i class="fa fa-phone"></i> +91-7698216320
+						</li>
+					</ul>
+					<div class="mapouter">
+						<div class="gmap_canvas"><iframe width="525" height="400" id="gmap_canvas" src="https://maps.google.com/maps?q=178,kshama%20soc%20dharamnagar%20A.k%20ROAD%20surat,india&t=&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a href="https://embedgooglemap.net/124/"></a><br>
+							<style>
+								.mapouter{position:relative;text-align:right;height:500px;width:600px;}
+							</style><a href="https://www.embedgooglemap.net"></a>
+							<style>
+								.gmap_canvas {overflow:hidden;background:none!important;height:500px;width:600px;}
+							</style>
+						</div>
+					</div>
+				</div>	
+			</div>
+		</div>
+	</div>
+
+
+	<!-- Footer Section -->
+	<div class="footer-area">
+		<div class="container">
+			<div class="row py-5">
+				<div class="logo-area col-lg-4 col-md-4 col-sm-12 col-12">
+					<a class="navbar-brand text-white" href="#">
+						BB Portfoilio<span style ="color: #f87652;">.</span>
+					</a>
+					<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus voluptatibus adipisci molestiae deleniti non atque alias inventore eum a nemo quis facere in commodi</p>
+					<div class="links">
+						<i class="fa fa-facebook-square animate__animated"></i>
+						<i class="fa fa-instagram px-1 animate__animated"></i>
+						<i class="fa fa-twitter-square animate__animated"></i>
+					</div>
+				</div>
+				<div class="col-lg-4 col-md-4 col-sm-12 col-12 column">
+					<h4 class="heading">Skills<span style ="color: #f87652;">.</span></h4>
+					<ul class="list-group">
+						<li class="list-group-item border-0 bg-transparent">
+							<i class="fa fa-chevron-right"></i><span>HTML & CSS</span>
+						</li>
+						<li class="list-group-item border-0 bg-transparent">
+							<i class="fa fa-chevron-right"></i><span>PHP/Wordpress</span>
+						</li>
+						<li class="list-group-item border-0 bg-transparent">
+							<i class="fa fa-chevron-right"></i><span>JavaScript & jQuery</span>
+						</li>
+						<li class="list-group-item border-0 bg-transparent">
+							<i class="fa fa-chevron-right"></i><span>Webflow</span>
+						</li>
+					</ul>
+				</div>
+				<div class="col-lg-4 col-md-4 col-sm-12 col-12 column">
+					<h4 class="heading">Useful Links<span style ="color: #f87652;">.</span></h4>
+					<ul class="list-group">
+						<li class="list-group-item border-0 bg-transparent">
+							<i class="fa fa-chevron-right"></i><span>Github</span>
+						</li>
+						<li class="list-group-item border-0 bg-transparent">
+							<i class="fa fa-chevron-right"></i><span>LinkedIn</span>
+						</li>
+					</ul>
+				</div>
+			</div>
+		</div>
+	</div>
+
+
 	<div id="particles-js"></div>
 	<script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
 	<script>
@@ -225,7 +395,7 @@
 	        console.log('particles.json loaded...')
 	    })
 	</script>
-
+  
 	<script type="text/javascript" src="js/app.js"></script>
 	<script type="text/javascript" src="js/particles.js"></script>
 </body>
