--- a/index.html
+++ b/index.html
@@ -235,19 +235,19 @@
 						<div class="tab-pane fade show active" id="nav-home" role="tabpanel" aria-labelledby="nav-home-tab">
 							<div class="card-columns">
 								<div class="card border-0 padding-0">
-									<a href=""><img class="card-img-top" src="Images/Web_1.png" alt=""></a>
+									<a href="https://www.withvector.com/"><img class="card-img-top" src="Images/Web_1.png" alt=""></a>
 								</div>
 								<div class="card border-0 padding-0">
-									<a href=""><img class="card-img-top" src="Images/Web1.png" alt=""></a>
+									<a href="http://sevenslegalmai.wpenginepowered.com/"><img class="card-img-top" src="Images/Web1.png" alt=""></a>
 								</div>
 								<div class="card border-0 padding-0">
-									<a href=""><img class="card-img-top" src="Images/Web2.png" alt=""></a>
+									<a href="https://cleverboiler.com/"><img class="card-img-top" src="Images/Web2.png" alt=""></a>
 								</div>
 								<div class="card border-0 padding-0">
-									<a href=""><img class="card-img-top" src="Images/Web4.png" alt=""></a>
+									<a href="https://blog.sparkleinfotech.com/"><img class="card-img-top" src="Images/Web4.png" alt=""></a>
 								</div>
 								<div class="card border-0 padding-0">
-									<a href=""><img class="card-img-top" src="Images/Web5.png" alt=""></a>
+									<a href="https://sorcetek.com/"><img class="card-img-top" src="Images/Web5.png" alt=""></a>
 								</div>
 							</div>
 						</div>
@@ -255,19 +255,19 @@
 							<div class="tab-pane fade show active" id="nav-home" role="tabpanel" aria-labelledby="nav-home-tab">
 								<div class="card-columns">
 									<div class="card border-0 padding-0">
-										<a href=""><img class="card-img-top" src="Images/Web_1.png" alt=""></a>
+										<a href="https://www.withvector.com/"><img class="card-img-top" src="Images/Web_1.png" alt=""></a>
 									</div>
 									<div class="card border-0 padding-0">
-										<a href=""><img class="card-img-top" src="Images/Web1.png" alt=""></a>
+										<a href=http://sevenslegalmai.wpenginepowered.com/""><img class="card-img-top" src="Images/Web1.png" alt=""></a>
 									</div>
 									<div class="card border-0 padding-0">
-										<a href=""><img class="card-img-top" src="Images/Web2.png" alt=""></a>
+										<a href="https://cleverboiler.com/"><img class="card-img-top" src="Images/Web2.png" alt=""></a>
 									</div>
 									<div class="card border-0 padding-0">
-										<a href=""><img class="card-img-top" src="Images/Web4.png" alt=""></a>
+										<a href="https://blog.sparkleinfotech.com/"><img class="card-img-top" src="Images/Web4.png" alt=""></a>
 									</div>
 									<div class="card border-0 padding-0">
-										<a href=""><img class="card-img-top" src="Images/Web5.png" alt=""></a>
+										<a href="https://sorcetek.com/"><img class="card-img-top" src="Images/Web5.png" alt=""></a>
 									</div>
 								</div>
 						</div>
@@ -276,7 +276,7 @@
 						<div class="tab-pane fade show active" id="nav-home" role="tabpanel" aria-labelledby="nav-home-tab">
 							<div class="card-columns">
 								<div class="card border-0 padding-0">
-									<a href=""><img class="card-img-top" src="Images/Web3.png" alt=""></a>
+									<a href="https://zyncwebsite.webflow.io/"><img class="card-img-top" src="Images/Web3.png" alt=""></a>
 								</div>
 							</div>
 					</div>
