--- a/index.html
+++ b/index.html
@@ -345,7 +345,7 @@
 			<div class="row py-5">
 				<div class="logo-area col-lg-4 col-md-4 col-sm-12 col-12">
 					<a class="navbar-brand text-white" href="#">
-						BB Portfoilio<span style ="color: #f87652;">.</span>
+						Portfoilio<span style ="color: #f87652;">.</span>
 					</a>
 					<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus voluptatibus adipisci molestiae deleniti non atque alias inventore eum a nemo quis facere in commodi</p>
 					<div class="links">
