--- a/index.html
+++ b/index.html
@@ -235,19 +235,19 @@
 						<div class="tab-pane fade show active" id="nav-home" role="tabpanel" aria-labelledby="nav-home-tab">
 							<div class="card-columns">
 								<div class="card border-0 padding-0">
-									<a href="#"><img class="card-img-top" src="Images/Web_1.png" alt=""></a>
+									<a href=""><img class="card-img-top" src="Images/Web_1.png" alt=""></a>
 								</div>
 								<div class="card border-0 padding-0">
-									<a href="#"><img class="card-img-top" src="Images/Web1.png" alt=""></a>
+									<a href=""><img class="card-img-top" src="Images/Web1.png" alt=""></a>
 								</div>
 								<div class="card border-0 padding-0">
-									<a href="#"><img class="card-img-top" src="Images/Web2.png" alt=""></a>
+									<a href=""><img class="card-img-top" src="Images/Web2.png" alt=""></a>
 								</div>
 								<div class="card border-0 padding-0">
-									<a href="#"><img class="card-img-top" src="Images/Web4.png" alt=""></a>
+									<a href=""><img class="card-img-top" src="Images/Web4.png" alt=""></a>
 								</div>
 								<div class="card border-0 padding-0">
-									<a href="#"><img class="card-img-top" src="Images/Web5.png" alt=""></a>
+									<a href=""><img class="card-img-top" src="Images/Web5.png" alt=""></a>
 								</div>
 							</div>
 						</div>
@@ -255,19 +255,19 @@
 							<div class="tab-pane fade show active" id="nav-home" role="tabpanel" aria-labelledby="nav-home-tab">
 								<div class="card-columns">
 									<div class="card border-0 padding-0">
-										<a href="#"><img class="card-img-top" src="Images/Web_1.png" alt=""></a>
+										<a href=""><img class="card-img-top" src="Images/Web_1.png" alt=""></a>
 									</div>
 									<div class="card border-0 padding-0">
-										<a href="#"><img class="card-img-top" src="Images/Web1.png" alt=""></a>
+										<a href=""><img class="card-img-top" src="Images/Web1.png" alt=""></a>
 									</div>
 									<div class="card border-0 padding-0">
-										<a href="#"><img class="card-img-top" src="Images/Web2.png" alt=""></a>
+										<a href=""><img class="card-img-top" src="Images/Web2.png" alt=""></a>
 									</div>
 									<div class="card border-0 padding-0">
-										<a href="#"><img class="card-img-top" src="Images/Web4.png" alt=""></a>
+										<a href=""><img class="card-img-top" src="Images/Web4.png" alt=""></a>
 									</div>
 									<div class="card border-0 padding-0">
-										<a href="#"><img class="card-img-top" src="Images/Web5.png" alt=""></a>
+										<a href=""><img class="card-img-top" src="Images/Web5.png" alt=""></a>
 									</div>
 								</div>
 						</div>
@@ -276,7 +276,7 @@
 						<div class="tab-pane fade show active" id="nav-home" role="tabpanel" aria-labelledby="nav-home-tab">
 							<div class="card-columns">
 								<div class="card border-0 padding-0">
-									<a href="https://zyncwebsite.webflow.io/"><img class="card-img-top" src="Images/Web3.png" alt=""></a>
+									<a href=""><img class="card-img-top" src="Images/Web3.png" alt=""></a>
 								</div>
 							</div>
 					</div>
@@ -315,7 +315,7 @@
 					</div>
 				</div>
 				<div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
-					<ul class="list-unstyled">
+					<ul class="list-unstyled info">
 						<li>
 							<i class="fa fa-envelope-o"></i> bhavyababariya007@gmail.com
 						</li>
@@ -345,9 +345,9 @@
 			<div class="row py-5">
 				<div class="logo-area col-lg-4 col-md-4 col-sm-12 col-12">
 					<a class="navbar-brand text-white" href="#">
-						Portfoilio<span style ="color: #f87652;">.</span>
+						BB Portfoilio<span style ="color: #f87652;">.</span>
 					</a>
-					<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus voluptatibus adipisci molestiae deleniti non atque alias inventore eum a nemo quis facere in commodi</p>
+					<p>Hello, My name is Bhavya Babariya and I am professional PHP WordPress Developer, I can Create website according to your needs.</p>
 					<div class="links">
 						<i class="fa fa-facebook-square animate__animated"></i>
 						<i class="fa fa-instagram px-1 animate__animated"></i>
@@ -362,6 +362,12 @@
 						</li>
 						<li class="list-group-item border-0 bg-transparent">
 							<i class="fa fa-chevron-right"></i><span>PHP/Wordpress</span>
+						</li>
+						<li class="list-group-item border-0 bg-transparent">
+							<i class="fa fa-chevron-right"></i><span>JavaScript & jQuery</span>
+						</li>
+						<li class="list-group-item border-0 bg-transparent">
+							<i class="fa fa-chevron-right"></i><span>Webflow</span>
 						</li>
 					</ul>
 				</div>
