--- a/index.html
+++ b/index.html
@@ -39,24 +39,24 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav ml-auto">
       <li class="nav-item">
-        <a class="nav-link" style="color: #f87652 !important;" href="#">Home</a>
+        <a class="nav-link" style="color: #f87652 !important;" href="#home">Home</a>
       </li>
       
 	  <li class="nav-item">
-		<a class="nav-link" href="#">About</a>
+		<a class="nav-link" href="#about">About</a>
 	  </li>
 	  
 
       <li class="nav-item">
-        <a class="nav-link" href="#">Skills</a>
+        <a class="nav-link" href="#skill">Skills</a>
       </li>
 
       <li class="nav-item">
-        <a class="nav-link" href="#">portfolio</a>
+        <a class="nav-link" href="#portfolio">portfolio</a>
       </li>
 
       <li class="nav-item">
-        <a class="nav-link" href="#">Contact</a>
+        <a class="nav-link" href="#contact">Contact</a>
       </li>
     </ul>
   </div>
@@ -66,7 +66,7 @@
 
 	<!-- Hero Section -->
 
-	<div class="hero_section">
+	<div class="hero_section" id="home">
 		<div class="container">
 			<div class="row">
 				<div class="col-lg-6 col-md-6 col-ms-12 col-xs-12">
@@ -88,7 +88,7 @@
 	</div>
 
 <!-- About Us -->
-	<div class="about_section">
+	<div class="about_section" id="about">
 		<div class="container">
 			<div class="row m-0">
 				<div class="col-lg-6 col-md-6 col-ms-12 col-xs-12">
@@ -137,7 +137,7 @@
 		</div>
 	</div>
 	<!-- Skill Section -->
-	<div class="skills_section">
+	<div class="skills_section" id="skill">
 		<div class="container">
 			<div class="row">
 				<div class="col-lg-6 col-md-6 col-ms-12 col-xs-12 skills_section_left_section">
@@ -215,7 +215,7 @@
 	</div>
 
 	<!-- Portfilio Section -->
-	<div class="portfolio_section">
+	<div class="portfolio_section" id="portfolio">
 		<div class="container">
 			<div class="row">
 				<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
@@ -287,7 +287,7 @@
 	</div>
 
 	<!-- Contact Section -->
-	<div class="contact_section">
+	<div class="contact_section" id="contact">
 		<div class="container">
 			<div class="row m-0">
 				<div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
