--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 <body>
 	<div class="container">
 		<div class="nav_section">
-			<nav class="navbar navbar-expand-lg navbar-light">
+			<nav class="navbar navbar-expand-lg navbar-light sticky">
   <a class="navbar-brand text-white" href="#" <span>.</span>
   </a>
   <button class="navbar-toggler" style="border: none;" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
