--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
 							<td><a href="http://www.linkedin.com/in/bhavya-babariya">Bhavya Babariya</a></td>
 						</tr>
 					</table>
-					<button class="btn btn-light btn-sm animate_animated">Download CV</button>
+					<a href="cv/cv.pdf" class="btn btn-light btn-sm animate_animated" download>Download CV</a>
 				</div>
 			</div>
 		</div>
