--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
 	<div class="container">
 		<div class="nav_section">
 			<nav class="navbar navbar-expand-lg navbar-light sticky">
-  <a class="navbar-brand text-white" href="#" <h2> portfolio <span>.</span></h2>
-  </a>
+<!--   <a class="navbar-brand text-white" href="#" <h2> portfolio <span>.</span></h2>
+  </a> -->
   <button class="navbar-toggler" style="border: none;" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <i class="text-white fa fa-bars" ></i>
   </button>
