--- a/index.html
+++ b/index.html
@@ -349,8 +349,8 @@
 					</a>
 					<p>Hello, My name is Bhavya Babariya and I am professional PHP WordPress Developer, I can Create website according to your needs.</p>
 					<div class="links">
-						<a href="https://m.facebook.com/bhavya.babariya/"><i class="fa fa-facebook-square animate__animated"></i></a> 
-						<i class="fa fa-instagram px-1 animate__animated"></i>
+						<a href="https://facebook.com/bhavya.babariya/"><i class="fa fa-facebook-square animate__animated"></i></a> 
+						<a> href="https://www.instagram.com/bhavya_2365"<i class="fa fa-instagram px-1 animate__animated"></i></a> 
 						<i class="fa fa-twitter-square animate__animated"></i>
 					</div>
 				</div>
