--- a/index.html
+++ b/index.html
@@ -351,7 +351,7 @@
 					<div class="links">
 						<a href="https://facebook.com/bhavya.babariya/"><i class="fa fa-facebook-square animate__animated"></i></a> 
 						<a href="https://www.instagram.com/bhavya_2365"><i class="fa fa-instagram px-1 animate__animated"></i></a> 
-						<i class="fa fa-twitter-square animate__animated"></i>
+						<a href="https://twitter.com/Bhavya babariya"><i class="fa fa-twitter-square animate__animated"></i></a> 
 					</div>
 				</div>
 				<div class="col-lg-4 col-md-4 col-sm-12 col-12 column">
