--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>BhavyaBabariya portfolio</title>
 
+	<!-- Favicon -->
+    <link rel="icon" type="image/png" href="Images/favicon.png">
+
 	<!-- Latest compiled and minified CSS -->
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css">
 
@@ -30,8 +33,7 @@
 	<div class="container">
 		<div class="nav_section">
 			<nav class="navbar navbar-expand-lg navbar-light sticky">
-<!--   <a class="navbar-brand text-white" href="#" <h2> portfolio <span>.</span></h2>
-  </a> -->
+<a class="navbar-brand text-white" href="#"><img src="Images/favicon.png"></a>
   <button class="navbar-toggler" style="border: none;" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <i class="text-white fa fa-bars" ></i>
   </button>
