--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 				<div class="col-lg-6 col-md-6 col-ms-12 col-xs-12">
 					<h3>Hello!</h3>
 					<h1>I<span style="color:#f87652;">'</span>m Bhavya Babariya</h1>
-					<h2>PHP | WordPress Developer | Webflow </h2>
+					<h2>PHP | WordPress | Webflow  Developer</h2>
 					<p>I have 6 Months of Exprience in Wordpress PHP Website Development. I have also Worked in Live Websites.</p>
 					<div class="btn-container">
 						<button class="btn btn-light animate_animated">Hire Me</button>
