--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 				<div class="col-lg-6 col-md-6 col-ms-12 col-xs-12">
 					<h3>Hello!</h3>
 					<h1>I<span style="color:#f87652;">'</span>m Bhavya Babariya</h1>
-					<h2>PHP | WordPress | Webflow  Developer</h2>
+					<h2>PHP | WordPress</h2>
 					<p>I have 2.5 years of experience in WordPress development using Elementor. I have also worked on live websites and can create professional websites according to your needs.</p>
 					<div class="btn-container">
 						<button class="btn btn-light animate_animated">Hire Me</button>
