--- a/index.html
+++ b/index.html
@@ -370,7 +370,7 @@
 			<div class="row py-5">
 				<div class="logo-area col-lg-4 col-md-4 col-sm-12 col-12">
 					<a class="navbar-brand text-white" href="#">
-						BB Portfoilio<span style ="color: #f87652;">.</span>
+						Bhavya Portfoilio<span style ="color: #f87652;">.</span>
 					</a>
 					<p>Hello, My name is Bhavya Babariya and I am a professional PHP WordPress Developer with 2.5 years of experience using Elementor. I can create websites according to your needs with modern design and functionality.</p>
 					<div class="links">
