--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>BhavyaBabariya portfolio</title>
+	<meta name="description" content="Professional PHP WordPress Developer with 2.5 years of experience using Elementor. Specializing in modern website development, custom WordPress themes, and responsive web design. Contact for professional web development services.">
+	<meta name="google-site-verification" content="lDDAQQxWdYrIvx0XdqEuf5fyflgYQtysr85NkmDB7Hc" />
 
 	<!-- Favicon -->
     <link rel="icon" type="image/png" href="Images/favicon.png">
@@ -426,8 +428,8 @@
 	    })
 	</script>
   
-	<script type="text/javascript" src="js/app.js"></script>
-	<script type="text/javascript" src="js/particles.js"></script>
+	<script type="text/javascript" src="js/app.min.js"></script>
+	<script type="text/javascript" src="js/particles.min.js"></script>
 	
 	<!-- Loading Screen Script -->
 	<script>
@@ -770,5 +772,14 @@
 			});
 		});
 	</script>
+	<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-V92XWXM54X"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-V92XWXM54X');
+</script>
 </body>
 </html>
