--- a/index.html
+++ b/index.html
@@ -279,73 +279,41 @@
 		</div>
 	</div>
 
-	<!-- Portfilio Section -->
+	<!-- Portfolio Section -->
 	<div class="portfolio_section" id="portfolio">
 		<div class="container">
 			<div class="row">
 				<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-					<h1 class="text-white text-center">My Portfolio<span style ="color: #f87652;">.</span></h1>
+					<h1 class="text-white text-center">My Portfolio<span style="color: #f87652;">.</span></h1>
+					<p class="text-center text-white-50 mt-2">WordPress projects built with Elementor</p>
 				</div>
 			</div>
 			<div class="row mt-5">
 				<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-					<nav class="d-flex justify-content-center">
-						<div class="nav nav-tabs nav-fill" id="nav-tab" role="tablist">
-							<a class="nav-item nav-link text-white active" id="nav-home-tab" data-toggle="tab" href="#nav-home" role="tab" aria-controls="nav-home" aria-selected="true">HTML/CSS</a>
-							<a class="nav-item nav-link text-white" id="nav-profile-tab" data-toggle="tab" href="#nav-profile" role="tab" aria-controls="nav-profile" aria-selected="false">Wordpress</a>
-							<a class="nav-item nav-link text-white" id="nav-webflow-tab" data-toggle="tab" href="#nav-webflow" role="tab" aria-controls="nav-webflow" aria-selected="false">Webflow</a>
-						</div>
-					</nav>
-					<div class="tab-content py-3 px-3 px-sm-0" id="nav-tabContent">
-						<div class="tab-pane fade show active" id="nav-home" role="tabpanel" aria-labelledby="nav-home-tab">
-							<div class="card-columns">
-								<div class="card border-0 padding-0">
-									<a href=""><img class="card-img-top" src="Images/Web_1.png" alt=""></a>
-								</div>
-								<div class="card border-0 padding-0">
-									<a href=""><img class="card-img-top" src="Images/Web1.png" alt=""></a>
-								</div>
-								<div class="card border-0 padding-0">
-									<a href=""><img class="card-img-top" src="Images/Web2.png" alt=""></a>
-								</div>
-								<div class="card border-0 padding-0">
-									<a href=""><img class="card-img-top" src="Images/Web4.png" alt=""></a>
-								</div>
-								<div class="card border-0 padding-0">
-									<a href=""><img class="card-img-top" src="Images/Web5.png" alt=""></a>
-								</div>
+					<div class="card-columns">
+						<div class="card border-0">
+							<a href="https://dessconbuilders.com/" target="_blank"><img class="card-img-top" src="Images/dessconbuilders.png" alt="WordPress Project 1"></a>
+							<div class="card-body bg-dark text-white">
+								<h5 class="card-title">Dessconbuilders</h5>
+								<p class="card-text">Developed a fully responsive website using WordPress and Beaver Builder with a modern, user-friendly design. Implemented custom functionality using Advanced Custom Fields (ACF) for dynamic content management. Configured Post SMTP for reliable email delivery and integrated Contact Form 7 to handle user inquiries efficiently.</p>
 							</div>
 						</div>
-						<div class="tab-pane fade" id="nav-profile" role="tabpanel" aria-labelledby="nav-profile-tab">
-							<div class="tab-pane fade show active" id="nav-home" role="tabpanel" aria-labelledby="nav-home-tab">
-								<div class="card-columns">
-									<div class="card border-0 padding-0">
-										<a href=""><img class="card-img-top" src="Images/Web_1.png" alt=""></a>
-									</div>
-									<div class="card border-0 padding-0">
-										<a href=""><img class="card-img-top" src="Images/Web1.png" alt=""></a>
-									</div>
-									<div class="card border-0 padding-0">
-										<a href=""><img class="card-img-top" src="Images/Web2.png" alt=""></a>
-									</div>
-									<div class="card border-0 padding-0">
-										<a href=""><img class="card-img-top" src="Images/Web4.png" alt=""></a>
-									</div>
-									<div class="card border-0 padding-0">
-										<a href=""><img class="card-img-top" src="Images/Web5.png" alt=""></a>
-									</div>
-								</div>
-						</div>
-					</div>
-					<div class="tab-pane fade" id="nav-webflow" role="tabpanel" aria-labelledby="nav-webflow-tab">
-						<div class="tab-pane fade show active" id="nav-home" role="tabpanel" aria-labelledby="nav-home-tab">
-							<div class="card-columns">
-								<div class="card border-0 padding-0">
-									<a href=""><img class="card-img-top" src="Images/Web3.png" alt=""></a>
-								</div>
+						<div class="card border-0">
+							<a href="https://www.catchyourbreath.ch/"><img class="card-img-top" src="Images/catchyourbreath.png" alt="WordPress Project 2"></a>
+							<div class="card-body bg-dark text-white">
+								<h5 class="card-title">catchyourbreath</h5>
+								<p class="card-text">Developed a fully branded WordPress website using Elementor page builder, delivering a responsive and modern design. Integrated Advanced Custom Fields (ACF) for dynamic content management, Contact Form 7 for handling user inquiries, and Post SMTP for secure and reliable email delivery.</p>
 							</div>
+						</div>
+						<div class="card border-0">
+							<a href="https://beaverbuild.webmasterindia.net/"><img class="card-img-top" src="Images/beaverbuild.png" alt="WordPress Project 3"></a>
+							<div class="card-body bg-dark text-white">
+								<h5 class="card-title">Beaverbuild</h5>
+								<p class="card-text">Developed a fully branded WordPress website using Elementor page builder, delivering a responsive and modern design. Integrated Advanced Custom Fields (ACF) for dynamic content management, Contact Form 7 for handling user inquiries, and Post SMTP for secure and reliable email delivery.</p>
+							</div>
+						</div>
+						
 					</div>
-				</div>
 				</div>
 			</div>
 		</div>
@@ -447,12 +415,17 @@
 					<h4 class="heading">Useful Links<span style ="color: #f87652;">.</span></h4>
 					<ul class="list-group">
 						<li class="list-group-item border-0 bg-transparent">
-							<i class="fa fa-chevron-right"></i><span>Github</span>
+						  <a href="https://github.com/BhavyaBabariya" target="_blank" class="text-decoration-none  useful-links">
+							<i class="fa fa-chevron-right me-2"></i>Github
+						  </a>
 						</li>
+					  
 						<li class="list-group-item border-0 bg-transparent">
-							<i class="fa fa-chevron-right"></i><span>LinkedIn</span>
+						  <a href="http://www.linkedin.com/in/bhavya-babariya" target="_blank" class="text-decoration-none useful-links">
+							<i class="fa fa-chevron-right me-2"></i>LinkedIn
+						  </a>
 						</li>
-					</ul>
+					  </ul>
 				</div>
 			</div>
 		</div>
